<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.apress.bgn</groupId>
    <artifactId>java-23-for-absolute-beginners</artifactId>
    <version>3.0-SNAPSHOT</version> <!-- read from .mvn/maven.config in Maven 4.0.0, replace with ${revision}-->
    <packaging>pom</packaging> <!-- this is specific to the parent pom.xml -->

    <name>Java for Absolute Beginners, 3nd edition</name>
    <description> This project is designed to gradually introduce you to the
        Java language syntax and the proper way to design solutions using it.
        The syntax used contains elements from the beginning to version 23 of Java.</description>
    <url>https://www.apress.com/gp/book/9781484270790</url> <!-- TODO change this -->

    <modules>
        <module>chapter00</module>
        <module>chapter01</module>
        <module>chapter02</module>
        <module>chapter03</module>
        <module>chapter04</module>
        <module>chapter05</module>
        <module>chapter06</module>
        <module>chapter07</module>
        <module>chapter08</module>
        <module>chapter09</module>
        <module>chapter10</module>
        <module>chapter11</module>
        <module>chapter12</module>
        <module>chapter13</module>
    </modules>

    <properties>
        <revision>1.0-SNAPSHOT</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <log4j.version>3.0.0-beta2</log4j.version>
        <logback.version>1.5.6</logback.version>
        <commons.lang3.version>3.15.0</commons.lang3.version>
        <lombok.version>1.18.34</lombok.version>
        <jupiter.junit.version>5.10.3</jupiter.junit.version>
        <byte.buddy.version>1.14.18</byte.buddy.version>
        <mysql.driver.version>9.0.0</mysql.driver.version>
        <tomcat.version>11.0.0-M22</tomcat.version>
        <jackson.version>2.17.2</jackson.version>

        <java.version>23</java.version>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
    </properties>

    <!-- Use this commands to check for new versions of dependencies and plugins-->
    <!-- mvn versions:display-dependency-updates -->
    <!-- mvn versions:display-plugin-updates -->

    <build>
        <!-- <defaultGoal>clean install site site:stage</defaultGoal> -->
        <!-- <defaultGoal>clean install site site:stage site:run</defaultGoal> -->
        <defaultGoal>clean install</defaultGoal> <!-- TODO change this to clean site at the right moment -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.12.1</version>
                    <configuration>
                        <generateReports>true</generateReports>
                        <generateSitemap>true</generateSitemap>
                        <relativizeDecorationLinks>false</relativizeDecorationLinks>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.6.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-report-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jxr-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.8.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- The enforcer plugin provides goals to control certain environmental constraints such as Maven version, JDK version and OS family along with many more standard rules and user created rules. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.9.8</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>${java.version}</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <!-- TODO remove this maybe, after 23 release -->
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <configuration>
                    <!-- Build documentation with ./mnnw or  mvn (default goal)-->
                    <!-- Start server with: ./mvnw site:run or mvn site:run -->
                    <!-- Starts a Jetty server on port 9000 serving the project documentation-->
                    <port>9000</port>
                    <tempWebappDirectory>${basedir}/target/staging</tempWebappDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <!-- here the phase you need -->
                        <phase>site</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/staging</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/src/site/extra</directory>
                                    <includes>
                                        <include>*.html</include>
                                    </includes>
                                    <filtering>true</filtering>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <!-- Needed to include this in the site report-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <configuration>
                    <showSuccess>false</showSuccess>
                    <outputDirectory>${project.build.directory}/site</outputDirectory>
                    <reportsDirectories>
                        <reportsDirectories>${project.build.directory}/surefire-reports</reportsDirectories>
                    </reportsDirectories>
                    <aggregate>true</aggregate>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <reportSets>
                    <reportSet>
                        <id>aggregate</id>
                        <reports>
                            <report>aggregate</report>
                            <report>test-aggregate</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <failOnError>false</failOnError>
                    <doclint>none</doclint>
                    <additionalOptions>-html5</additionalOptions>
                    <show>public</show>
                    <quiet>true</quiet>
                    <doctitle>${project.name}</doctitle>
                    <inputEncoding>${project.reporting.outputEncoding}</inputEncoding>
                    <outputEncoding>${project.reporting.outputEncoding}</outputEncoding>
                    <sourceFileExcludes>
                        <exclude>**/module-info.java</exclude>
                    </sourceFileExcludes>
                    <reportSets>
                        <reportSet>
                            <id>aggregate</id>
                            <reports>
                                <report>aggregate-no-fork</report>
                                <report>test-aggregate-no-fork</report>
                            </reports>
                        </reportSet>
                        <reportSet>
                            <id>default</id>
                            <reports>
                                <report>javadoc</report>
                                <report>test-javadoc</report>
                            </reports>
                        </reportSet>
                    </reportSets>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <developers>
        <developer>
            <name>Iuliana Cosmina</name>
            <organization>Cloudsoft</organization>
            <roles>
                <role>Judge</role>
                <role>Jury</role>
                <role>Executioner</role>
            </roles>
            <email>Iuliana.Cosmina@gmail.com</email>
        </developer>
    </developers>

    <distributionManagement>
        <site>
            <id>${project.artifactId}</id>
            <name>${project.name}</name>
            <url>file:///${project.basedir}/target/web</url>
        </site>
    </distributionManagement>

</project>